infra/k8s/overlays/dev/03-wi-test-pod.local.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wi-test
  namespace: dev
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: app-sa
  restartPolicy: Never
  containers:
    - name: azcli
      image: mcr.microsoft.com/azure-cli:2.65.0
      command: ["/bin/sh","-c"]
      args:
        - |
          [...]
