infra/k8s/overlays/dev/03-wi-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wi-test
  namespace: dev
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: app-sa
  restartPolicy: Never
  containers:
    - name: azcli
      image: mcr.microsoft.com/azure-cli:2.65.0
      command: ["/bin/sh","-c"]
      args:
        - |
          set -e
          echo "AZURE_CLIENT_ID=$AZURE_CLIENT_ID"
          echo "AZURE_FEDERATED_TOKEN_FILE=$AZURE_FEDERATED_TOKEN_FILE"
          az login --identity --allow-no-subscriptions
          az account set --subscription "$AZURE_SUBSCRIPTION_ID"
          az group show -n rg-kingsila-dev -o table
          echo "SUCCESS"
