infra/k8s/overlays/dev/patch-service-targetport.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
